treat gervill.jar as an endorsed library