@@ -2,17 +2,20 @@
 	<property name="jarfile" value="gervill4beads.jar"/>
 	
 	<path id="gervill4beads.classpath">
-		<!--
-			FIXME: javac seems to find the built-in Gervill classes
-			(in the JDK runtime libraries) before our own gervill.jar.
-		-->
 		<pathelement location="lib/gervill.jar"/>
 		<pathelement location="lib/beads.jar"/>
 		<pathelement location="lib/beads-io.jar"/>
 	</path>
 	
 	<target name="build">
-		<javac classpathref="gervill4beads.classpath" srcdir="src" destdir="bin" debug="true" source="1.7"/>
+		<javac classpathref="gervill4beads.classpath" srcdir="src" destdir="bin" debug="true" source="1.7">
+			<!--
+				Treat gervill.jar as an "endorsed" library so that it overrides
+				the Gervill classes that are included directly in the Java
+				runtime libraries.
+			-->
+			<compilerarg value="-Djava.endorsed.dirs=./lib"/>
+		</javac>
 	</target>
 	
 	<target name="jar" depends="build">
@@ -26,3 +29,7 @@
 		</delete>
 	</target>
 </project>
+
+<!--
+vim:ts=2:
+-->
